--- a/files/php-fpm.conf
+++ b/files/php-fpm.conf
@@ -1,7 +1,7 @@
 [global]
 pid = /usr/local/php5.6/php-fpm.pid
 error_log = /dev/stdout
-log_level = error
+log_level = notice
 
 [php-version]
 listen = 0.0.0.0:9000
