--- a/files/php.ini
+++ b/files/php.ini
@@ -33,7 +33,7 @@ ignore_repeated_source = Off
 report_memleaks = On
 track_errors = Off
 html_errors = Off
-error_log = /dev/stdout
+error_log = /data/php5.6/php-errors.log
 variables_order = "GPCS"
 request_order = "GP"
 register_globals = Off
