--- a/files/php-fpm.conf
+++ b/files/php-fpm.conf
@@ -1,6 +1,6 @@
 [global]
-pid = /usr/local/php5.6/php-fpm.pid
-error_log = /dev/stdout
+pid = /data/php5.6/php-fpm.pid
+error_log = /data/php5.6/php-fpm.log
 log_level = notice
 
 [php-version]
